fix layout shift when delete, then bug when add, helper function for ordinal

--- a/src/index.css
+++ b/src/index.css
@@ -117,6 +117,7 @@ body {
   padding: 10px;
   transition: 400ms;
   border-radius: 3px;
+  overflow: hidden;
 }
 
 .first {
@@ -157,7 +158,11 @@ body {
   .grid-container {
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
+    overflow-x: hidden;
+  }
+
+  .todo-card {
+    overflow: visible;
   }
 
   .todo-card:hover {
